--- a/views/layout.html
+++ b/views/layout.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel= "stylesheet" type="text/css" href= "/css/main.css">
-    </head>
+        <link rel="stylesheet" href="/css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>  
     <body>
-        <div id="wrap">
-            <div class="navigation">
-                <div class="left">
-                    <a id="home_link" href="/">Home</a>
-                    <a id="admin_link" href="/admin">Admin Home</a>
-                </div>
-
-                <div class="right">
-                    <a id="signin_link" href="/login">Signin</a>
-                    <a id="signout_link" href="/logout">Singout</a>
-                    <a id="signup_link" href="/signup">Signup</a>
-                    <a id="addmember_link" href="/addmember">Add Member</a>
-                </div>
-            </div>
-
-            {{{ content }}}
-        </div>
-
-        <!-- <footer>
-            <ul class="meta">
-            <li><a href="http://www.friendsch.org/aboutus.html" target="_blank">About</a></li>
-            <li class="desktop-tablet-only"><a href="mailto:secretary@friendsch.org" target="_blank">Contact</a></li>
-            </ul>
-            <p class="rights meta"> <span id="date_rights">2015</span> <a href="http://www.friendsch.org/" target="_blank"> Friends of Chichester Harbour</a></p>
-        </footer> -->
+        <!-- Navbar here -->
+        {{{ content }}}
+        <footer>
+        </footer>
         <script type="text/javascript" src="/js/bundle.js"></script>
     </body>
 </html>
