--- a/views/admin-home.html
+++ b/views/admin-home.html
@@ -12,7 +12,7 @@
             <button id="search-button" class="button-two member">Search</button>
         </div>
 
-        <div id="search-container-content">
-        </div>
+        <!-- This id has style applied to it -->
+        <div id="search-result"></div>
     </div>
 </div>
