--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -57,71 +57,156 @@ $color: #ededed;
 	background-color: #fff;
 	margin: 10px;
 	padding: 10px;
-	margin-top: 0;
-	display: flex;
-	overflow: scroll;
-	.col-1 {
-		width: 20%;
-		min-height: 100px;
-		border-right: 1px solid $color;
+	.table-section-individual-header {
+		display: flex;
+		width: 100%;
+		height: 60px;
+		.col-1 {
+			width: 20%;
+			border-right: 1px solid $color;
+		}
+		.col-2 {
+			width: 20%;
+			border-right: 1px solid $color;
+		}
+		.col-3 {
+			width: 20%;
+			border-right: 1px solid $color;
+		}
+		.col-4 {
+			width: 20%;
+			border-right: 1px solid $color;
+		}
+		.col-5 {
+			width: 20%;
+			border-right: 1px solid $color;
+		}
+		.col-6 {
+			width: 20%;
+			border-right: 1px solid $color;
+		}
+		.col-7 {
+			width: 20%;
+		}
 	}
-	.col-2 {
-		width: 20%;
-		min-height: 100px;
-		border-right: 1px solid $color;
-	}
-	.col-3 {
-		width: 20%;
-		min-height: 100px;
-		border-right: 1px solid $color;
-	}
-	.col-4 {
-		width: 20%;
-		min-height: 100px;
-		border-right: 1px solid $color;
-	}
-	.col-5 {
-		width: 20%;
-		min-height: 100px;
-		border-right: 1px solid $color;
-	}
-	.col-6 {
-		width: 20%;
-		min-height: 100px;
-		border-right: 1px solid $color;
-	}
-	.col-7 {
-		width: 20%;
-		min-height: 100px;
+	.table-section-individual-rows {
+		height: 31em;
+		overflow: scroll;
+		.row {
+			display: flex;
+			width: 100%;
+			height: 60px;
+			p {font-size: 20px;}
+			.col-1 {
+				width: 20%;
+				border-right: 1px solid $color;
+			}
+			.col-2 {
+				width: 20%;
+				border-right: 1px solid $color;
+			}
+			.col-3 {
+				width: 20%;
+				border-right: 1px solid $color;
+			}
+			.col-4 {
+				width: 20%;
+				border-right: 1px solid $color;
+			}
+			.col-5 {
+				width: 20%;
+				border-right: 1px solid $color;
+			}
+			.col-6 {
+				width: 20%;
+				border-right: 1px solid $color;
+			}
+			.col-7 {
+				width: 20%;
+			}
+		}
 	}
 }
 
-.table-section-member {
+#search-result {
 	width: 80%;
-	background-color: #fff;
-	display: flex;
-	padding: 10px;
-	.col-1 {
-		width: 20%;
-		// min-height: 100px;
-	}
-	.col-2 {
-		width: 20%;
-		// min-height: 100px;
-	}
-	.col-3 {
-		width: 20%;
-		// min-height: 100px;
-	}
-	.col-4 {
-		width: 20%;
-		// min-height: 100px;
-	}
-	.col-5 {
-		width: 30%;
-		// min-height: 100px;
+	max-width: 1000px;
+	.search-table-section-member {
+		width: 100%;
+		background-color: #fff;
+		padding: 10px;
+		.search-table-section-member-header {
+			width: 100%;
+			display: flex;
+			height: 60px;
+			.col-1 {
+				width: 30%;
+				border-right: 1px solid $color;
+			}
+			.col-2 {
+				width: 10%;
+				border-right: 1px solid $color;
+			}
+			.col-3 {
+				width: 10%;
+				border-right: 1px solid $color;
+			}
+			.col-4 {
+				width: 20%;
+				border-right: 1px solid $color;
+			}
+			.col-5 {
+				width: 40%;
+			}
+		}
+		.search-table-section-member-rows {
+			max-height: 300px;
+			overflow-y: scroll;
+			a {
+				text-decoration: none;
+				color: inherit;
+			}
+			.row {
+				width: 100%;
+				display: flex;
+				height: 35px;
+				line-height: 35px;
+				text-align: left;
+				p {
+					font-size: 18px;
+				}
+				.col-1 {
+					padding-left: 8px;
+					width: 30%;
+					border-right: 1px solid $color;
+				}
+				.col-2 {
+					padding-left: 8px;
+					width: 10%;
+					border-right: 1px solid $color;
+				}
+				.col-3 {
+					padding-left: 8px;
+					width: 10%;
+					border-right: 1px solid $color;
+				}
+				.col-4 {
+					padding-left: 8px;
+					width: 20%;
+					border-right: 1px solid $color;
+				}
+				.col-5 {
+					padding-left: 8px;
+					width: 40%;
+				}
+			}
+			.row:hover {
+				background-color: #eee;
+			}
+		}
 	}
 }
+
 
 .actions-container {
 	width: 20%;
