add rendering for signup and redirects and upload

--- a/assets/css/layout/specifics.scss
+++ b/assets/css/layout/specifics.scss
@@ -19,3 +19,12 @@
 		font-size: 10px;
 	}
 }
+
+.container-small {
+	max-width: 320px;
+	margin: auto;
+}
+
+.container-large {
+	margin-top: 50px;
+}
