--- a/views/admin-home.html
+++ b/views/admin-home.html
@@ -1,6 +1,19 @@
 <div class="full-screen-fixed">
-    <nav></nav>
+    <!-- Navbar here -->
+    <ul class="navigation">
+        <li><a href="/admin">Home</a></li>
+        <li><a href="/signup">Signup</a></li>
+        <li><a href="/addmember">Add member</a></li>
+        <li><a href="/maintenance">Date maintenance</a></li>
+        <li><a href="#">Reports</a></li>
+        <li><a href="#">Emails</a></li>
+    </ul>
     <div class="overall-container-member">
+        <div style="maring:auto;text-align:center;"
+            class="section-label"
+        >
+            <h1>Search member</h1>
+        </div>
         <div class="search-container">
             <select>
                 <option value ="two" selected>Active</option>
