--- a/views/new-member.html
+++ b/views/new-member.html
@@ -1,6 +1,6 @@
 <div class="new-member-container">
     <h1>New Member Form</h1>
-    <form action="/members" method="post">
+    <form action="/api/members" method="post">
 
         <div class="topSectionDividor">
             <h2>1. Profile</h2>
