--- a/views/view-member.html
+++ b/views/view-member.html
@@ -1,5 +1,13 @@
 <div class="full-screen-fixed">
-    <nav></nav>
+    <!-- Navbar here -->
+    <ul class="navigation">
+        <li><a href="/admin">Home</a></li>
+        <li><a href="/signup">Signup</a></li>
+        <li><a href="/addmember">Add member</a></li>
+        <li><a href="/maintenance">Date maintenance</a></li>
+        <li><a href="#">Reports</a></li>
+        <li><a href="#">Emails</a></li>
+    </ul>
     <div class="overall-container">
         <div class="content-container">
             <div class="individual-section">
