--- a/assets/css/components/_input.scss
+++ b/assets/css/components/_input.scss
@@ -116,6 +116,27 @@ input[type=checkbox]:checked + label:before {
     line-height: 15px;
 }
 
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+    border: 1px solid black;
+ 	border-radius: 5px;
+ 	padding: 1em 2em;
+  	background-color: #acc;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
 // @media (max-width: $tablet) {
 // 	input::-webkit-input-placeholder, input:-moz-placeholder, input::-moz-placeholder, input:-ms-input-placeholder {
 // 		font-size: $p-font-size-tablet;
