--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -35,6 +35,13 @@
 	background-color: #fff;
 	margin: 10px;
 	display: flex;
+	text-align: left;
+	padding: 20px;
+	p {
+		font-size: 15px;
+		margin-bottom: 5px;
+		margin-top: 5px; 
+	}
 	.col-1 {
 		width: 40%;
 		min-height: 100px;
@@ -173,7 +180,7 @@ $color: #ededed;
 				line-height: 35px;
 				text-align: left;
 				p {
-					font-size: 18px;
+					font-size: 15px;
 				}
 				.col-1 {
 					padding-left: 8px;
