--- a/views/layout.html
+++ b/views/layout.html
@@ -6,6 +6,14 @@
     </head>  
     <body>
         <!-- Navbar here -->
+        <ul class="navigation">
+            <li><a href="/admin">Home</a></li>
+            <li><a href="/signup">Signup</a></li>
+            <li><a href="/addmember">Add member</a></li>
+            <li><a href="/maintenance">Date maintenance</a></li>
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Emails</a></li>
+        </ul>
         {{{ content }}}
         <footer>
         </footer>
