--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,8 @@
 
 	<div class="inner-section-divider-small"></div>
 
-	<div class="section-label">
+	<div style="maring:auto;text-align:center;"
+		class="section-label">
 		<h1>Sign In</h1>
 	</div>
 
@@ -11,9 +12,21 @@
 	<div class="container-small">
 		<form action="/login" method="post">
 
-			<input id="email" type="text" name="email" tabindex=1 placeholder="Email adress">
+			<input style="margin-bottom: 10px;"
+				id="email" 
+				type="text" 
+				name="email" 
+				tabindex=1 
+				placeholder="Email adress"
+			>
 			<div class="inner-section-divider-small"></div>
-			<input id="password" type="password" name="password" tabindex=2 placeholder="Password">
+			<input style="margin-bottom: 10px;"
+				id="password" 
+				type="password" 
+				name="password" 
+				tabindex=2 
+				placeholder="Password"
+			>
 			<div class="inner-section-divider-small"></div>
 			<button id="button_sign_in" type="submit" class="btn-primary">Sign in</button>
 		</form>
