--- a/views/signup.html
+++ b/views/signup.html
@@ -2,7 +2,9 @@
 
 	<div class="inner-section-divider-small"></div>
 
-	<div class="section-label">
+	<div style="maring:auto;text-align:center;"
+		class="section-label"
+	>
 		<h1>Sign Up</h1>
 	</div>
 
@@ -11,7 +13,7 @@
 	<div class="container-small">
 		<form action="/signup" method="post">
 
-			<input
+			<input style="margin-bottom: 10px;"
 				id="email"
 				type="text" 
 				name="email" 
@@ -19,7 +21,7 @@
 				placeholder="Email adress"
 			>
 			<div class="inner-section-divider-small"></div>
-			<input 
+			<input style="margin-bottom: 10px;"
 				id="password" 
 				type="password" 
 				name="password" 
@@ -27,7 +29,7 @@
 				placeholder="Password"
 			>
 			<div class="inner-section-divider-small"></div>
-			<input 
+			<input style="margin-bottom: 10px;"
 				id="cpassword" 
 				type="password" 
 				name="cpassword" 
