--- a/views/maintenance.html
+++ b/views/maintenance.html
@@ -1,16 +1,16 @@
-<div class="full-screen-fixed">
-    <!-- Navbar here -->
-    <ul class="navigation">
-        <li><a href="/admin">Home</a></li>
-        <li><a href="/signup">Signup</a></li>
-        <li><a href="/addmember">Add member</a></li>
-        <li><a href="/maintenance">Date maintenance</a></li>
-        <li><a href="#">Reports</a></li>
-        <li><a href="#">Emails</a></li>
-    </ul>
-    <div class="overall-container-member">
-        <div class="upload-container"></div>
+<div class="container-large">
 
+    <div class="inner-section-divider-small"></div>
+
+    <div style="maring:auto;text-align:center;"
+        class="section-label">
+        <h1>Upload</h1>
+    </div>
+
+    <div class="inner-section-divider-medium"></div>
+
+    <div class="container-small">
+        <div class="upload-container"></div>
         <!-- This id has style applied to it -->
         <div id="search-result"></div>
     </div>
