search by active and deleted

--- a/views/admin-home.html
+++ b/views/admin-home.html
@@ -15,9 +15,9 @@
             <h1>Search member</h1>
         </div>
         <div class="search-container">
-            <select>
-                <option value ="two" selected>Active</option>
-                <option value ="three">Deleted</option>
+            <select id="member-status">
+                <option value="active" selected>Active</option>
+                <option value="deleted">Deleted</option>
             </select>
             <input placeholder="Membership number" class="input-member" id="search-field-id">
             <input placeholder="Email address" class="input-member" id="search-field-email">
