--- a/views/layout.html
+++ b/views/layout.html
@@ -9,6 +9,8 @@
         <ul class="navigation">
             <li><a href="/admin">Home</a></li>
             <li><a href="/signup">Signup</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/logout">Logout</a></li>
             <li><a href="/addmember">Add member</a></li>
             <li><a href="/maintenance">Date maintenance</a></li>
             <li><a href="#">Reports</a></li>
