--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,9 @@ p {
   font-weight: 200;
   font-size: 24px; }
 
+h2 {
+  margin-bottom: 10px; }
+
 @media (max-width: 1700px) {
   p {
     font-weight: 200;
@@ -11,6 +14,9 @@ p {
   p {
     font-weight: 200;
     font-size: 19px; } }
+.info {
+  font-weight: bold; }
+
 button, .button-one, .button-two {
   font-size: 20px;
   font-weight: 100;
@@ -345,6 +351,9 @@ nav {
     display: flex;
     width: 100%;
     height: 60px; }
+    .table-section-individual .table-section-individual-header p {
+      font-size: 20px;
+      font-weight: bold; }
     .table-section-individual .table-section-individual-header .col-1 {
       width: 20%;
       border-right: 1px solid #ededed; }
@@ -366,14 +375,14 @@ nav {
     .table-section-individual .table-section-individual-header .col-7 {
       width: 20%; }
   .table-section-individual .table-section-individual-rows {
-    height: 31em;
+    height: 25em;
     overflow: scroll; }
     .table-section-individual .table-section-individual-rows .row {
       display: flex;
       width: 100%;
       height: 60px; }
       .table-section-individual .table-section-individual-rows .row p {
-        font-size: 20px; }
+        font-size: 15px; }
       .table-section-individual .table-section-individual-rows .row .col-1 {
         width: 20%;
         border-right: 1px solid #ededed; }
